# AnalystChatbot

./: .gitignore  job_fallback.db  main.py  pyproject.toml  requirements.txt
app/: graph.py
app/agents/: __init__.py  base.py  chat.py  router.py  text2sql.py  visualization.py
app/config/: __init__.py  settings.py
app/database/: connector.py
app/models/: context.py  response.py
app/prompts/: __init__.py  prompt_manager.py
app/prompts/templates/: chat_system_with_db.txt  modify_query_system.txt  router_system.txt  router_user.txt  text2sql_generation_system.txt  text2sql_generation_user.txt  text2sql_verify.txt  text2sql_verify_user.txt
app/utils/: dataframe_utils.py  llm_factory.py
ui/: streamlit_app.py  streamlit_wrapper.py
