[project]
name = "job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langgraph>=1.2.2",
    "sqlalchemy>=2.0.50",
]
